# aider-mcp-server

./: .ci-check  .env.sample  .gitignore  .mcp.json  .mypy.ini  .pre-commit-config.yaml  .rate-limit-fallback.json  AIDER_COMPLIANCE_TRACKING.md  BUG_FIX_SUMMARY.md  CLAUDE.md  CLAUDE_AIDER_COMPLIANCE.md  CLAUDE_COORDINATOR_STREAMING.md  CLAUDE_REFACTORING_BACKUP.md  CONTRIBUTING.md  COORDINATOR_FRAMEWORK_AUDIT.md  COORDINATOR_STREAMING_TRACKING.md  Dockerfile  IMPLEMENTATION_TRACKING.md  PHASE1_FINDINGS.md  PORT_ISOLATION_FIX.md  README-setup-aider-mcp.md  README.md  README_DE.md  REORGANIZATION_PLAN.md  RUNTIME_WARNING_FIX.md  STDIO_TRANSPORT_STATUS.md  TODO_just_prompt_integration.md  TOOL_ERROR_FIX.md  check_compatibility.py  check_env.py  coverage.json  debug_auth.py  demo_verbose_logging.py  fix_formatting.py  mkdocs.yml  package.json  pyproject.toml  requirements.txt  setup.cfg  smithery.yaml  (+9 more)
.claude/: settings_local.json
.claude/commands/: aider_prime_context.md  aider_priming_context.md  concise_mode.md  context_prime.md  context_prime_w_aider.md  finalize_code.md  github_prime_context.md  jp_add_coverage.md  jp_prime_context.md  jp_with_mode.md  multi_aider_sub_agent.md  reduce_python.md
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  test-aider-compatibility.yml
`.github/workflows/: ci.yml
ai_docs/: aider-architect-mode.md  aider-sdk-token-limit.md  just-prompt-example-mcp-server.xml  programmable-aider-documentation.md  testing-with-mock-api-keys.md  token-limit-handling.md
docs/: DEVELOPMENT.md  index.md  server-name-conflict-fix.md  setup-aider-mcp-commands.md  setup-aider-mcp-env-var.md
scripts/: check_aider_compatibility.py  inspect_aider_params.py  prd.txt  sync-environments.sh  validate_project_structure.py
specs/: init-aider-mcp-exp.md
src/aider_mcp_server/: SUMMARY_DI_CONTAINER.md  __init__.py  __main__.py  app.py  application_coordinator.py  application_errors.py  authentication_errors.py  cli.py  component_initializer.py  configuration_system.py  coordinator_discovery.py  debug_auth.py  default_authentication_provider.py  dependency_container.py  dependency_container_docs.md  error_formatter.py  error_handling.py  event_coordinator.py  event_mediator.py  event_participant.py  event_system.py  example_mediator_usage.py  handler_registry.py  handlers.py  http_streamable_transport_adapter.py  initialization_sequence.py  mcp_types.py  multi_transport_server.py  progress_reporter.py  refactoring_example.py  request_processor.py  response_formatter.py  security.py  security_service.py  server.py  session_manager.py  setup_aider_mcp.py  singleton_manager.py  sse_server.py  sse_transport_adapter.py  (+11 more)
src/aider_mcp_server/aider_mcp_server/: event_system.py
src/aider_mcp_server/atoms/: atoms_utils.py  data_types.py  diff_cache.py  event_types.py  internal_types.py  logging.py
src/aider_mcp_server/atoms/errors/: application_errors.py
src/aider_mcp_server/atoms/logging/: fallback_logger.py
src/aider_mcp_server/atoms/security/: __init__.py  context.py  permissions.py
src/aider_mcp_server/atoms/tools/: __init__.py  aider_ai_ask.py  aider_ai_code.py  aider_ai_code_improvements.md  aider_common.py  aider_compatibility.py  aider_list_models.py  aider_stubs.pyi  changes_summarizer.py
src/aider_mcp_server/atoms/types/: __init__.py  data_types.py  event_types.py  internal_types.py  streaming_types.py
src/aider_mcp_server/atoms/utils/: __init__.py  atoms_utils.py  config_constants.py  diff_cache.py  fallback_config.py
src/aider_mcp_server/interfaces/: __init__.py  application_coordinator.py  authentication_provider.py  dependency_container.py  error_handler.py  event_coordinator.py  event_handler.py  request_handler.py  security_service.py  shutdown_context.py  transport_adapter.py  transport_registry.py
src/aider_mcp_server/managers/: __init__.py  client_session_manager.py  http_server_manager.py  process_manager.py  workspace_manager.py
src/aider_mcp_server/scripts/: __init__.py  setup_aider_mcp_cli.py
src/aider_mcp_server/stubs/: sse_starlette.pyi
tests/: conftest.py  monkey_patch_sse.py  test_application_coordinator.py  test_authentication_provider.py  test_cli.py  test_configuration_system.py  test_coordinator_discovery.py  test_dependency_container.py  test_error_formatter.py  test_error_handling.py  test_event_coordinator.py  test_event_mediator.py  test_event_participant.py  test_event_system.py  test_fallback.py  test_handler_registry.py  test_health_monitor.py  test_http_cli_mode.py  test_http_streamable_transport_adapter.py  test_initialization_sequence.py  test_integration.py  test_main.py  test_multi_transport.py  test_parallel_port_safety.py  test_phase_1_3_streaming.py  test_request_monitor_integration.py  test_request_processor.py  test_response_formatter.py  test_security_service.py  test_session_manager.py  test_sse_connection_handling.py  test_sse_coordinator_integration.py  test_sse_error_handling.py  test_sse_event_filtering.py  test_sse_fastmcp_integration.py  test_sse_integration_working_dir.py  test_sse_message_handling.py  test_sse_monitoring_endpoints.py  test_sse_security_validation.py  test_sse_server.py  (+17 more)
tests/atoms/: test_diff_cache.py  test_logging.py
tests/atoms/tools/: conftest.py  test_ai_code_response_format.py  test_aider_ai_code.py  test_aider_ai_code_mock.py  test_aider_changes_handling.py  test_aider_list_models.py  test_architect_mode.py  test_changes_integration.py  test_changes_summarizer.py  test_changes_summarizer_performance.py  test_mock_api_keys.py  test_response_format.py  test_simple_content_detection.py  test_summary_format.py
tests/compatibility/: __init__.py  test_aider_compatibility.py
tests/e2e/: conftest.py
tests/interfaces/: __init__.py  test_transport_adapter.py  test_transport_registry.py
tests/managers/: __init__.py  test_client_session_manager.py  test_http_server_manager.py  test_workspace_manager.py
tests/test_error_handling/: test_application_errors.py
tests/tests/: integration_conftest.py  test_event_system.py
with-sse-mcp/src/mcp/: __init__.py
(+60 files in other folders)
